--- a/backendCondo/backendCondo/src/main/resources/application.properties
+++ b/backendCondo/backendCondo/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 server.port=8090
 
-spring.datasource.url=jdbc:mysql:localhost:4000/condo?useTimezone=true&serverTimezone=Africa/Maputo
+spring.datasource.url=jdbc:mysql://localhost:4000/condo?useTimezone=true&serverTimezone=Africa/Maputo
 spring.datasource.username=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+spring.datasource.hikari.connection-test-query=SELECT 1
